# naive_backlink

./: .gitignore  .jiggle_version.config  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  Makefile  README.md  SECURITY.md  dns_diag_win.py  example.py  junit.xml  pypi_links.txt  pyproject.toml  test.sh  tox.ini
.github/workflows/: build.yml  publish_to_pypi.yml
docs/: PEP.v0.md  PEP.v1.md  TODO.md  annoymous.md  hypothetical_policies.md  thoughts.md
naive_backlink/: __about__.py  __init__.py  __main__.py  api.py  cache.py  cli.py  config.py  crawler.py  link_logic.py  models.py  playwright_crawler.py  scoring.py  ui.py
scripts/: integration.sh  make_source.sh  test.sh
test/: test_all.py  test_blacklist.py  test_cache.py  test_link_logic_more.py  test_score.py
